@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -34,6 +34,9 @@ public class InlineTypes {
 
     public static final Scenario[] DEFAULT_SCENARIOS = {
             new Scenario(0,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-XX:-UseACmpProfile",
                          "-XX:+AlwaysIncrementalInline",
@@ -45,6 +48,9 @@ public class InlineTypes {
                          "-XX:+InlineTypeReturnedAsFields"
             ),
             new Scenario(1,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-XX:-UseACmpProfile",
                          "-XX:-UseCompressedOops",
@@ -56,6 +62,9 @@ public class InlineTypes {
                          "-XX:-InlineTypeReturnedAsFields"
             ),
             new Scenario(2,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-XX:-UseACmpProfile",
                          "-XX:-UseCompressedOops",
@@ -68,6 +77,9 @@ public class InlineTypes {
                          "-XX:+StressInlineTypeReturnedAsFields"
             ),
             new Scenario(3,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-DVerifyIR=false",
                          "-XX:+AlwaysIncrementalInline",
@@ -78,6 +90,9 @@ public class InlineTypes {
                          "-XX:+InlineTypeReturnedAsFields"
             ),
             new Scenario(4,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-DVerifyIR=false",
                          "-XX:FlatArrayElementMaxOops=-1",
@@ -88,6 +103,9 @@ public class InlineTypes {
                          "-XX:-ReduceInitialCardMarks"
             ),
             new Scenario(5,
+                         "-XX:+EnableValhalla",
+                         "-XX:+EnablePrimitiveClasses",
+                         "--add-exports", "java.base/jdk.internal.value=ALL-UNNAMED",
                          "-XX:+IgnoreUnrecognizedVMOptions",
                          "-XX:-UseACmpProfile",
                          "-XX:+AlwaysIncrementalInline",
@@ -147,7 +165,7 @@ public class InlineTypes {
         protected static final String CHECKCAST_ARRAYCOPY = "(.*" + CALL_LEAF_NOFP + ".*checkcast_arraycopy.*" + END;
         protected static final String JLONG_ARRAYCOPY = "(.*" + CALL_LEAF_NOFP + ".*jlong_disjoint_arraycopy.*" + END;
         protected static final String FIELD_ACCESS = "(.*Field: *" + END;
-        protected static final String SUBSTITUTABILITY_TEST = START + "CallStaticJava" + MID + "java.lang.runtime.PrimitiveObjectMethods::isSubstitutable" + END;
+        protected static final String SUBSTITUTABILITY_TEST = START + "CallStaticJava" + MID + "java.lang.runtime.ValueObjectMethods::isSubstitutable" + END;
         protected static final String CMPP = START + "(CmpP|CmpN)" + MID + "" + END;
     }
 }
